# WebTemplate

./: .claudeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  install.py  install.sh  package-lock.json  start.bat
.github/workflows/: deploy.yml
backend/: .env.example  billing  helloworld  requirements.txt
backend/core/: asgi.py
backend/core/settings/: base.py
backend/core_app/: apps.py  urls.py
core/backend/: .env.example  manage.py  requirements.txt
core/backend/core/: emails.py  error_handlers.py  installed_modules.py  urls.py  wsgi.py
core/backend/core/settings/: base.py  development.py  production.py
core/backend/core_app/: models.py  signals.py  views.py
core/backend/core_app/migrations/: 0001_initial.py
core/backend/core_app/tests/: test_discovery.py  test_health.py
core/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
core/frontend/src/: App.jsx  api.js  index.css  main.jsx  modules.js
core/frontend/src/components/: AdminPage.jsx  ErrorBoundary.jsx  HomePage.jsx  Navbar.css  Navbar.jsx  PrivateRoute.jsx  SiteLogo.jsx  UserPage.jsx
core/frontend/src/contexts/: CoreContext.jsx
core/frontend/src/utils/: api.js  logger.js
frontend/: package-lock.json  package.json  vite.config.js
frontend/modules/: billing  helloworld  userauth
frontend/src/: App.css  modules.js
frontend/src/components/: LoadingSpinner.jsx  NotFoundPage.jsx  Notification.jsx  SiteLogo.jsx
frontend/src/utils/: sentry.js
modules/billing/: README.md  module.json
modules/billing/backend/billing/: admin.py  apps.py  emails.py  license_auth.py  models.py  module_settings.py  serializers.py  signals.py  urls.py  views.py
modules/billing/cpp/: CMakeLists.txt
modules/billing/cpp/src/: crypto_utils.cpp  license_client.cpp  machine_id.cpp  machine_id.h  main.cpp
modules/billing/frontend/: package.json
modules/billing/frontend/src/: api.js  index.js  (+1 more)
modules/files/: module.json
modules/files/frontend/: package.json
modules/fileupload/: README.md  module.json
modules/fileupload/frontend/: package.json
modules/helloworld/: module.json
modules/helloworld/backend/: requirements.txt
modules/helloworld/frontend/: package.json
modules/licensing/: module.json
modules/licensing/cpp/: CMakeLists.txt  README.md
modules/licensing/cpp/src/: app_example.cpp  crypto_utils.h  license_client.cpp  license_client.h  license_verifier.cpp  license_verifier.h  machine_id.cpp  machine_id.h  main.cpp
modules/licensing/frontend/: package.json
modules/orgs/: module.json
modules/orgs/frontend/: package.json
modules/support/: module.json
modules/support/frontend/: package.json
modules/userauth/: module.json
modules/userauth/backend/: requirements.txt
modules/userauth/frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.js
(+202 files in other folders)
